--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ Daily Practice Hours(minimum):<br>
 </table>
 <center>
 To know more about band members,contact with
-<a href="https://m.facebook.com/profile.php?id=100009175706455&ref=content_filter">Rifat</a>
+<a href="https://www.facebook.com/profile.php?id=100010135717312">Rifat</a>
 or
-<a href="https://www.facebook.com/profile.php?id=100010135717312">Tamim</a>
+<a href="https://m.facebook.com/profile.php?id=100009175706455&ref=content_filter">Tamim</a>
 </nav>
 </center>
 	
